# kubani

./: .gitignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  .sops.yaml  Makefile  README.md  example.yaml  pyproject.toml  setup.sh  sops-age-secret.yaml
.kiro/steering/: tools.md
ansible/: README.md  ansible.cfg
ansible/inventory/: README.md  hosts  hosts-gpu.yml.example  hosts-ha.yml.example  hosts-minimal.yml.example  hosts-mixed.yml.example  hosts.yml.example
ansible/playbooks/: README.md  add_node.yml  preflight_checks.yml  provision_cluster.yml  setup_ssh.yml  site.yml
ansible/roles/: README.md
cluster_manager/: README.md  __init__.py  cli.py  exceptions.py  inventory.py  logging_config.py  secrets.py  tailscale.py  tui.py
cluster_manager/models/: __init__.py  cluster.py  node.py
cluster_manager/tui/: __init__.py  app.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_TOOLING.md  DNS_CONFIGURATION.md  ERROR_HANDLING.md  GITOPS_SERVICE_DEPLOYMENT.md  GITOPS_VALIDATION.md  GPU_CONFIGURATION.md  PRODUCTION_SERVICES_QUICKSTART.md  QUICKSTART.md  SECRETS_MANAGEMENT.md  TESTING.md  TROUBLESHOOTING.md
gitops/: README.md  SOPS_SETUP.md
gitops/apps/: README.md  kustomization.yaml
gitops/flux-system/: DEPLOYMENT_ORDER.md  KUSTOMIZATION_SUMMARY.md  README.md  apps-kustomization.yaml  databases-kustomization.yaml  gotk-sync.yaml  (+2 more)
scripts/: check_connectivity.sh  configure_dns.py  create_encrypted_secrets.py  get_traefik_ip.sh  provision_cluster.sh  quickstart.sh  setup_dns_records.sh  setup_passwordless_sudo.sh  setup_sops.py  setup_ssh_key_single.sh  setup_ssh_keys.sh  setup_vault.sh  validate_authentik.sh  validate_certificates.sh  validate_kustomizations.sh  validate_pods.sh  validate_postgresql.sh  validate_redis.sh  verify_services.sh  verify_tooling.sh
tests/: __init__.py  conftest.py
(+223 files in other folders)
